Fixed CSS alignment for next/previous articles on mobile devices.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -821,10 +821,24 @@ ul.ui-autocomplete {
 
 .article-previous {
 	float: left;
+	max-width: 49%;
+	margin-left: 20px;
 }
 
 .article-next {
 	float: right;
+	max-width: 49%;
+	text-align: right;
+	margin-right: 20px;
+}
+
+.article-previous i {
+	margin: 0 5px 0 -20px;
+}
+
+.article-next i {
+	float: right;
+	margin: 5px -20px 0 8px;
 }
 
 .article-related-by-theme {
